fixing alignment, removing .css

--- a/css/main.scss
+++ b/css/main.scss
@@ -1869,7 +1869,7 @@ $baseurl: '{{ site.baseurl }}/images';
 
 	@media screen and (min-width: 736px) {
 		.spotlight > .making-img {
-			margin-top: -38%;
+			margin-top: -27%;
 		}
 
 		.spotlight > .ethical-img {
@@ -1877,11 +1877,11 @@ $baseurl: '{{ site.baseurl }}/images';
 		}
 
 		.spotlight > .repair-img {
-			margin-top: -18%;
+			margin-top: -11%;
 		}
 
 		.spotlight > .sustain-img {
-			margin-top: -15%;
+			margin-top: -8%;
 		}
 
 		.spotlight > .setting-img {
